# notifications-system

./: .env_example  Makefile  README.md  database.sql  pyproject.toml
notifications/: crud.py  database.py  settings.py
